<resources>
    <string name="app_name">Attandence With Face</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_index">Index</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">------ ------</string>
    <string name="nav_header_subtitle">------------------------------</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>




    <string name="menu_noti">Notification</string>
    <string name="menu_sender">Sender</string>
    <string name="menu_addstudent">Add Student</string>
    <string name="menu_addteacher">Add Teacher</string>
    <string name="menu_attedance">Attendance</string>
    <string name="menu_attandancereport">Attedance Report</string>
    <string name="menu_detailstudent">Student</string>
    <string name="menu_detailteacher">Teacher</string>
    <string name="menu_profile">Profile</string>


    <string name="menu_share">Share</string>

    <string name="menu_Logout">Log Out</string>

    <string name="key"></string>
    <string name="place"></string>
    <string name="title_activity_student_index">studentIndex</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>
    <string name="send">Send</string>
    <string name="message">Message:</string>
    <string name="subject">Subject</string>
    <string name="fullname">Full name:</string>
    <string name="usertypw_teacher">UserTypw:Teacher</string>
    <string name="profile_pic">Profile pic</string>
    <string name="division">Division:</string>
    <string name="rollnumber">RollNumber:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="_91_1234567890">+91 1234567890</string>

    <string name="search">Search</string>
    <string name="camera">Camera</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="previous">Previous</string>


    <string-array name="FY_1">

        <item>Communication Skill</item>
        <item>Operating Systems</item>
        <item>Digital Electronics</item>
        <item>Imperative Programming</item>
        <item>Discrete Mathematics</item>
        <item>Imperative Programming Practical</item>
        <item>Digital Electronics Practical</item>
        <item>Operating Systems Practical</item>
        <item>Discrete Mathematics Practical</item>
        <item>Communication Skills Practical</item>

    </string-array>
    <string-array name="SUbject">

        <item>BSCIT</item>


    </string-array>


    <string-array name="FY_2">

        <item>Object oriented Programming</item>
        <item>Microprocessor Architecture</item>
        <item>Web Programming</item>
        <item>Numerical and Statistical Methods</item>
        <item>Green Computing</item>
        <item>Object Oriented Programming Practical</item>
        <item>Microprocessor Architecture Practical</item>
        <item>Web Programming Practical</item>
        <item>Numerical Statistical Methods Practical</item>
        <item>Green Computing Practical</item>

    </string-array>

    <string-array name="categriory">

        <item>FY_1</item>
        <item>FY_2</item>


    </string-array>

    <string-array name="yearArray">

        <item>FY</item>



    </string-array>








    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="AppName">FaceX</string>
    <string name="divAlert">Please enter division</string>
    <string name="enterNo">Please enter number</string>
    <string name="emailAlert">Please enter email id</string>
    <string name="properEmailAlert">Please enter proper email id</string>
    <string name="properAddress">Please enter proper addresses</string>
    <string name="validNo">Please enter valid number</string>
    <string name="nameAlert">Please enter Name </string>
    <string name="alertDegree">Please enter degree </string>
    <string name="enterRoll">Please enter roll number</string>
    <string name="BOD">Please enter birth date</string>
    <string name="fullNameAlert">Please enter FullName </string>
    <string name="enterDetails">please fill field detail</string>
    <string name="noLength">number length will be 10</string>
    <string name="enterStime">Please enter starting time</string>
    <string name="enterEtime">Please enter endTime</string>
    <string name="msgAlert">Please enter Message</string>
    <string name="subjectAlert">Please enter Subject</string>
    <string name="shortPass">password too short</string>
    <string name="enterPass">Please enter your password</string>
    <string name="vPass">Please enter valid password</string>
    <string name="dobAlert">Please enter  DateOfBirth </string>


    <string name="email">Email:</string>
    <string name="adminerror_210_com">------@gmail.com</string>
    <string name="uid">Uid:</string>
    <string name="_941264536383012">-------------</string>
    <string name="address">Address:</string>
    <string name="cource">Cource:</string>
    <string name="year">Year:</string>
    <string name="subject1">Subject:</string>
    <string name="message1">Message</string>
    <string name="birth_date">Birth date</string>
    <string name="degree">Degree:</string>
    <string name="next">Next</string>
    <string name="password">password</string>
    <string name="comfirm_pasword">Comfirm pasword</string>
    <string name="submit">Submit</string>
    <string name="show">Show</string>


</resources>