<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"


    android:orientation="vertical"
    android:background="@drawable/gradient"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
  >
    <LinearLayout
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"

        android:orientation="vertical"
        >

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="cursive"
            android:text="Login"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="35dp" />

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/loginEmail"
            style="@style/modifiedEditText"
            android:hint="@string/login_email_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17dp"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/loginPassword"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:textSize="17dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cirLoginButton"
        style="@style/loginButton"
        android:text="Login"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <TextView
        style="@style/parent"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:id="@+id/signupfromlogin"
        android:textColor="@color/colorPrimary"
        android:text="@string/login_signup_hint"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <TextView
        android:id="@+id/forgetpass"
        android:textAlignment="textEnd"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:text="Forget password ?" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="68dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="49dp"

        android:layout_marginBottom="137dp"
        android:theme="@style/AppTheme.WhiteAccent" />


</LinearLayout>